testdata/golden/sema/invalid/concurrency/atomic_invalid_type.fmt
// Invalid @atomic - field type is not int, uint, bool, or *T

type BadAtomic = {
    @atomicname: string,
    @atomicdata: float,
}
